--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,3 +1,12 @@
-#blogHeader {
-    background-color: aquamarine;
+/* wraps header in a flex box */
+.header-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 4rem;
+}
+
+h1 {
+    padding-left: 1.5rem;
 }
