--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,8 +73,8 @@ h1 {
 /* place row flex box around img and form */
 .main-container {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 
