--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ h1 {
 
 /* THIS SECTION STYLES THE COLOR MODE SLIDER */
 
-/* Styling the Switch button */
+/* positions the slider checkbox */
 .switch {
     position: relative;
     display: inline-block;
@@ -90,14 +90,14 @@ h1 {
     top: 20.5%
   }
   
-  /* Hide default HTML checkbox */
+  /* hides the default checkbox */
   .switch input {
     opacity: 0;
     width: 0;
     height: 0;
   }
   
-  /* The slider */
+  /* styling for the slider while unchecked */
   .slider {
     position: absolute;
     cursor: pointer;
@@ -122,7 +122,7 @@ h1 {
     transition: .4s;
   }
 
-  
+  /* styling for the slider after its been checked */
   input:checked + .slider {
     background-color: rgb(255, 255, 255);
   }
@@ -138,7 +138,7 @@ h1 {
     transform: translateX(26px);
   }
   
-  /* Rounded sliders */
+  /* makes the slider round */
   .slider.round {
     border-radius: 28px;
     height: 1.1rem;
